<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/outro"
        android:id="@+id/outro"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_above="@+id/button1"
        android:layout_alignEnd="@+id/intro"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_above="@+id/intro"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string1"
        android:id="@+id/string1"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:textIsSelectable="false"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string2"
        android:id="@+id/string2"
        android:textColor="#000"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:layout_below="@+id/string1"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string3"
        android:id="@+id/string3"
        android:textColor="#000"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:layout_below="@+id/string2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string4"
        android:id="@+id/string4"
        android:textColor="#000"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:layout_below="@+id/string3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string5"
        android:id="@+id/string5"
        android:textColor="#000"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:layout_below="@+id/string4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string6"
        android:id="@+id/string6"
        android:textColor="#000"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:layout_below="@+id/string5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>
